<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <EditText
        android:id="@+id/titleTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterTitle"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/descrTextField"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Enter Story"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <EditText
        android:id="@+id/placeTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterPlace"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/authorTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterAuthor"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/perspective"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/perspectiveGroup"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/firstPersonButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/firstPerson" />

            <RadioButton
                android:id="@+id/thirdPersonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thirdPerson" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider"
            android:visibility="invisible"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>